# bary.ocr

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: AutoOcrs.slnx
backend/DbTest/: DbTest.csproj  Program.cs
backend/src/AutoOcrs.Api/: AutoOcrs.Api.csproj  AutoOcrs.Api.http  Program.cs  appsettings.json
backend/src/AutoOcrs.AppHost/: AutoOcrs.AppHost.csproj  Program.cs
backend/src/AutoOcrs.Infrastructure/: AutoOcrs.Infrastructure.csproj  DependencyInjection.cs
backend/src/AutoOcrs.ServiceDefaults/: Extensions.cs
backend/src/AutoOcrs.Worker/: AutoOcrs.Worker.csproj  Program.cs  Worker.cs
common/: pyproject.toml
common/src/orc_common/: __init__.py  config.py  exceptions.py  logging.py
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/components/: ConfirmDialog.vue  DataTable.vue  DocumentViewer.vue  FileUploader.vue  MetadataForm.vue  Modal.vue  ProjectBatches.vue  ProjectLabels.vue  ProjectMetadata.vue  ProjectNaming.vue  ProjectReports.vue  StatusBadge.vue  ToastContainer.vue  TreeNode.vue  TreeView.vue
frontend/composables/: useApi.ts  useConfirm.ts  useToast.ts
frontend/layouts/: auth.vue  default.vue
frontend/middleware/: auth.ts
frontend/pages/: index.vue  login.vue  users.vue
frontend/pages/documents/: [id].vue
frontend/stores/: project.ts
llm_server/: Dockerfile  entrypoint.sh
ocr_worker/: Dockerfile  pyproject.toml  supervisord.conf
ocr_worker/src/ocr_worker/: __init__.py  api.py  ocr_engine.py  text_detector.py
(+74 files in other folders)
