[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orc-common"
version = "1.0.0"
description = "Shared library for ORC Services (OCR & Data Extraction)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orc_common"]
