[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr-worker"
version = "1.0.0"
description = "OCR Worker microservice using traditional PaddleOCR v4 pipeline with ONNXRuntime"
requires-python = ">=3.11"
dependencies = [
    "orc-common",
    "opencv-python-headless>=4.10,<5.0",
    "numpy>=1.26,<2.0.0",
    "httpx>=0.27,<1.0",
    "aiohttp>=3.10,<4.0",
    "Pillow>=10.0,<12.0",
    "rapidocr-onnxruntime>=1.4,<2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9"
]

[project.scripts]
ocr-worker = "ocr_worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_worker"]
